Реализация обработки экспорта в import_hz.py: добавление и связывание отелей, городов, контрактов и отельеров.

--- a/hotels/views/hotel_view.xml
+++ b/hotels/views/hotel_view.xml
@@ -33,6 +33,7 @@
         <field name="arch" type="xml">
             <tree>
                 <field name="name"/>
+                <field name="commission" string="%"/>
                 <field name="num_stars"/>
                 <field name="city_id"/>
                 <field name="phone"/>
